Adjust breakpoint style rules to prevent layout shift overlap
I needed to switch 'max-width' to 'min-width' for the breakpoints as it was causing a layout shift to occur one pixel too thin when used in combination with a Mantine component with a 'hiddenFrom' prop value.

--- a/packages/frontend/src/features/Header/components/Navigation/index.module.css
+++ b/packages/frontend/src/features/Header/components/Navigation/index.module.css
@@ -1,20 +1,20 @@
 .navigation {
     display: grid;
     grid-auto-rows: auto;
-    grid-template-columns: auto 1fr;
+    grid-template-columns: auto auto 1fr;
     justify-content: end;
     align-items: center;
-    gap: 6px 16px;
+    gap: 6px 12px;
 
     width: 100%;
     height: min-content;
 
-    @media (max-width: $mantine-breakpoint-lg) {
-        grid-template-columns: auto auto 1fr;
+    @media (min-width: $mantine-breakpoint-lg) {
+        grid-template-columns: auto 1fr;
     }
 
-    @media (max-width: $mantine-breakpoint-xs) {
-        gap: 6px 12px;
+    @media (min-width: $mantine-breakpoint-xs) {
+        gap: 6px 16px;
     }
 }
 
@@ -23,28 +23,28 @@
 }
 
 .logo-container {
-    grid-area: 1 / 1 / 2 / 2;
+    grid-area: 1 / 2 / -1 / 3;
 
-    @media (max-width: $mantine-breakpoint-lg) {
-        grid-area: 1 / 2 / -1 / 3;
+    @media (min-width: $mantine-breakpoint-lg) {
+        grid-area: 1 / 1 / 2 / 2;
     }
 }
 
 .other-links {
-    grid-area: 1 / 2 / 2 / 3;
+    grid-area: 1 / 3 / -1 / -1;
 
     display: flex;
     flex-direction: row;
     justify-content: end;
     align-items: center;
-    gap: 16px;
+    gap: 6px;
 
-    @media (max-width: $mantine-breakpoint-lg) {
-        grid-area: 1 / 3 / -1 / -1;
+    @media (min-width: $mantine-breakpoint-lg) {
+        grid-area: 1 / 2 / 2 / 3;
     }
 
-    @media (max-width: $mantine-breakpoint-xs) {
-        gap: 6px;
+    @media (min-width: $mantine-breakpoint-xs) {
+        gap: 16px;
     }
 }
 
@@ -73,7 +73,7 @@
 }
 
 .categories {
-    grid-area: 2 / 1 / 3 / -1;
+    grid-area: 1 / 1 / -1 / 2;
 
     display: flex;
     flex-direction: row;
@@ -83,8 +83,8 @@
 
     height: 40px;
 
-    @media (max-width: $mantine-breakpoint-lg) {
-        grid-area: 1 / 1 / -1 / 2;
+    @media (min-width: $mantine-breakpoint-lg) {
+        grid-area: 2 / 1 / 3 / -1;
     }
 }
 
